<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contact Manager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Btn -->
    <string name="btn_add_contact">Add Contact</string>

    <!-- User Create -->
    <string name="user_contact_name">Contact Name</string>
    <string name="user_phone_number">Phone Number</string>
    <string name="user_email">Email</string>
    <string name="user_address">Address</string>
    <string name="settings_title">Privacy Settings</string>
    <string name="settings_item">Item</string>
    <string name="settings_access">Allow Access</string>
    <string name="settings_phone_number">Phone Number</string>
    <string name="settings_email">Email</string>
    <string name="settings_address">Address</string>

</resources>
